# Lenia

./: .gitignore  .gitmodules  CMakeLists.txt
Lenia/: .gitignore  Lenia.sln  Lenia.vcxproj  Logging.h  Main.cpp  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h
Lenia/Lenia/: Simulation.cpp  Simulation.h
